fix images path

--- a/portfolio.html
+++ b/portfolio.html
@@ -127,7 +127,7 @@
 
                 <div class="paint-row">
                     <div class="paint-img">
-                        <img src="C:\Users\Piyush\Desktop\Portfolio\Images\landscape2.jpg" alt="Painting 1">
+                        <img src="Images/landscape2.jpg" alt="Painting 1">
                     </div>
                     <div class="paint-desc">
                         <h3>Whispers of the Valley</h3>
@@ -141,7 +141,7 @@
 
                 <div class="paint-row reverse">
                     <div class="paint-img">
-                        <img src="C:\Users\Piyush\Desktop\Portfolio\Images\landscape1.jpg" alt="Painting 2">
+                        <img src="Images/landscape1.jpg" alt="Painting 2">
                     </div>
                     <div class="paint-desc">
                         <h3>Golden Horizon</h3>
@@ -154,7 +154,7 @@
 
                 <div class="paint-row">
                     <div class="paint-img">
-                        <img src="C:\Users\Piyush\Desktop\Portfolio\Images\potrait1.jpg" alt="Painting 3">
+                        <img src="Images/potrait1.jpg" alt="Painting 3">
                     </div>
                     <div class="paint-desc">
                         <h3>Silent Garden</h3>
@@ -174,26 +174,26 @@
 
             <div class="gallery" id="gallery">
                 <figure class="art-item" tabindex="0" data-title="Untitled #1" data-desc="Oil on canvas, 2024"
-                    data-src="file:///C:/Users/Piyush/Desktop/Portfolio/Images/potrait1.jpg">
-                    <img src="file:///C:/Users/Piyush/Desktop/Portfolio/Images/potrait1.jpg" alt="Untitled 1">
+                    data-src="Images/potrait1.jpg">
+                    <img src="Images/potrait1.jpg" alt="Untitled 1">
                     <figcaption>Untitled #1 — 2024</figcaption>
                 </figure>
 
                 <figure class="art-item" tabindex="0" data-title="Untitled #2" data-desc="Mixed media, 2023"
-                    data-src="file:///C:/Users/Piyush/Desktop/Portfolio/Images/potrait2.jpg">
-                    <img src="file:///C:/Users/Piyush/Desktop/Portfolio/Images/potrait2.jpg" alt="Untitled 2">
+                    data-src="Images/potrait2.jpg">
+                    <img src="Images/potrait2.jpg" alt="Untitled 2">
                     <figcaption>Untitled #2 — 2023</figcaption>
                 </figure>
 
                 <figure class="art-item" tabindex="0" data-title="Study in Blue" data-desc="Acrylic on board, 2022"
-                    data-src="file:///C:/Users/Piyush/Desktop/Portfolio/Images/landscape2.jpg">
-                    <img src="file:///C:/Users/Piyush/Desktop/Portfolio/Images/landscape2.jpg" alt="Study in Blue">
+                    data-src="Images/landscape2.jpg">
+                    <img src="Images/landscape2.jpg" alt="Study in Blue">
                     <figcaption>Study in Blue — 2022</figcaption>
                 </figure>
 
                 <figure class="art-item" tabindex="0" data-title="Small Sculpture" data-desc="Found objects, 2021"
-                    data-src="file:///C:/Users/Piyush/Desktop/Portfolio/Images/landscape1.jpg">
-                    <img src="file:///C:/Users/Piyush/Desktop/Portfolio/Images/landscape1.jpg" alt="Small Sculpture">
+                    data-src="Images/landscape1.jpg">
+                    <img src="Images/landscape1.jpg" alt="Small Sculpture">
                     <figcaption>Small Sculpture — 2021</figcaption>
                 </figure>
             </div>
