Updated feature or fixed bug

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="site-header">
         <div class="container header-inner">
@@ -47,46 +49,58 @@
             <div class="about-grid">
                 <div class="about-left fade-in">
                     <p class="short-bio">
-                        Priyanshu Mithagari is a passionate fine artist based in Alibag, Maharashtra, with a deep connection to the natural beauty of the Konkan region. His artistic journey began at a young age, and he has since developed a distinctive style that blends traditional techniques with contemporary sensibilities. Priyanshu's work reflects his fascination with the interplay of light, texture, and emotion, capturing moments of quiet beauty in both landscapes and portraits.
+                        Priyanshu Mithagari is a passionate fine artist based in Alibag, Maharashtra, with a deep
+                        connection to the natural beauty of the Konkan region. His artistic journey began at a young
+                        age, and he has since developed a distinctive style that blends traditional techniques with
+                        contemporary sensibilities. Priyanshu's work reflects his fascination with the interplay of
+                        light, texture, and emotion, capturing moments of quiet beauty in both landscapes and portraits.
                     </p>
 
                     <ul class="personal-list">
                         <li><strong>Location:</strong> Alibag, Maharashtra</li>
-                        <li><strong>Email:</strong> <a href="mailto:priyanshu.mithagari@gmail.com">priyanshu.mithagari@gmail.com</a></li>
-                        <li><strong>Phone:</strong> +91 98765 43210</li>
+                        <li><strong>Email:</strong> <a
+                                href="mailto:priyanshu.mithagari@gmail.com">priyanshu.mithagari@gmail.com</a></li>
+                        <li><strong>Phone:</strong> +91 81800 68563</li>
                         <li><strong>Social:</strong>
                             <span class="socials">
-                                <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                                <a href="#" aria-label="Behance"><i class="fab fa-behance"></i></a>
-                                <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                                <a href="https://www.instagram.com/_priyanshu_1309/" aria-label="Instagram"><i
+                                        class="fab fa-instagram"></i></a>
+                                <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+                                <a href="https://www.linkedin.com/in/priyanshu-mithagari-03bba0378/"
+                                    aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                             </span>
                         </li>
                     </ul>
 
                     <h3>Artist Statement</h3>
                     <p class="statement">
-                        My artistic practice is rooted in observation and emotional connection. I seek to capture not just what I see, but what I feel when confronted with a landscape or a person. Each brushstroke is a deliberate choice, each color a carefully considered emotion. My work in portraiture aims to reveal the inner world of my subjects, while my landscapes seek to preserve fleeting moments of natural beauty. I believe art should speak to our shared human experience, connecting us through visual storytelling.
+                        My artistic practice is rooted in observation and emotional connection. I seek to capture not
+                        just what I see, but what I feel when confronted with a landscape or a person. Each brushstroke
+                        is a deliberate choice, each color a carefully considered emotion. My work in portraiture aims
+                        to reveal the inner world of my subjects, while my landscapes seek to preserve fleeting moments
+                        of natural beauty. I believe art should speak to our shared human experience, connecting us
+                        through visual storytelling.
                     </p>
                 </div>
 
                 <aside class="about-right fade-in">
-                    <h3>Quick Facts</h3>
+                    <h3>PERSONAL PROFILE</h3>
                     <dl class="facts">
                         <div>
                             <dt>Born</dt>
-                            <dd>1995</dd>
+                            <dd>2003</dd>
                         </div>
                         <div>
-                            <dt>Education</dt>
-                            <dd>BFA from JJ School of Art</dd>
+                            <dt>Education </dt>
+                            <dd>BFA from Devrukh College Of Arts And Design (University of Mumbai)</dd>
                         </div>
                         <div>
                             <dt>Primary Media</dt>
-                            <dd>Oil, Watercolor, Charcoal, Mixed Media</dd>
+                            <dd>Oil, Watercolor, Charcoal</dd>
                         </div>
                         <div>
-                            <dt>Exhibitions</dt>
-                            <dd>Jahangir Art Gallery (2024), Nehru Art Gallery (2023)</dd>
+                            <dt>Exhibitions </dt>
+                            <dd>Jahangir Art Gallery (2025) | Nehru Art Gallery (2025)</dd>
                         </div>
                     </dl>
 
@@ -95,13 +109,14 @@
                         <li>Portrait Drawing & Painting</li>
                         <li>Watercolor Landscapes</li>
                         <li>Composition & Color Theory</li>
-                        <li>Large-scale Murals</li>
-                        <li>Mixed Media Art</li>
+
                     </ul>
 
                     <h3>Objective</h3>
                     <p class="objective">
-                        To create meaningful art that resonates with viewers and captures the beauty of both human expression and natural landscapes. Seeking opportunities for solo exhibitions and collaborative projects that push creative boundaries.
+                        To create meaningful art that resonates with viewers and captures the beauty of both human
+                        expression and natural landscapes. Seeking opportunities for solo exhibitions and collaborative
+                        projects that push creative boundaries.
                     </p>
                 </aside>
             </div>
@@ -157,22 +172,26 @@
         <section id="works" class="works container">
             <h2 class="fade-in">Selected Works</h2>
             <div class="gallery" id="gallery">
-                <figure class="art-item fade-in" tabindex="0" data-title="Untitled #1" data-desc="Oil on canvas, 2024" data-src="Images/potrait1.jpg">
+                <figure class="art-item fade-in" tabindex="0" data-title="Untitled #1" data-desc="Oil on canvas, 2024"
+                    data-src="Images/potrait1.jpg">
                     <img src="Images/potrait1.jpg" alt="Untitled 1">
                     <figcaption>Untitled #1 — 2024</figcaption>
                 </figure>
 
-                <figure class="art-item fade-in" tabindex="0" data-title="Untitled #2" data-desc="Mixed media, 2023" data-src="Images/potrait2.jpg">
+                <figure class="art-item fade-in" tabindex="0" data-title="Untitled #2" data-desc="Mixed media, 2023"
+                    data-src="Images/potrait2.jpg">
                     <img src="Images/potrait2.jpg" alt="Untitled 2">
                     <figcaption>Untitled #2 — 2023</figcaption>
                 </figure>
 
-                <figure class="art-item fade-in" tabindex="0" data-title="Study in Blue" data-desc="Acrylic on board, 2022" data-src="Images/landscape2.jpg">
+                <figure class="art-item fade-in" tabindex="0" data-title="Study in Blue"
+                    data-desc="Acrylic on board, 2022" data-src="Images/landscape2.jpg">
                     <img src="Images/landscape2.jpg" alt="Study in Blue">
                     <figcaption>Study in Blue — 2022</figcaption>
                 </figure>
 
-                <figure class="art-item fade-in" tabindex="0" data-title="Small Sculpture" data-desc="Found objects, 2021" data-src="Images/landscape1.jpg">
+                <figure class="art-item fade-in" tabindex="0" data-title="Small Sculpture"
+                    data-desc="Found objects, 2021" data-src="Images/landscape1.jpg">
                     <img src="Images/landscape1.jpg" alt="Small Sculpture">
                     <figcaption>Small Sculpture — 2021</figcaption>
                 </figure>
@@ -214,7 +233,7 @@
                     <h3>Get In Touch</h3>
                     <p><i class="fas fa-map-marker-alt"></i> Alibag, Maharashtra, India</p>
                     <p><i class="fas fa-envelope"></i> priyanshu.mithagari@gmail.com</p>
-                    <p><i class="fas fa-phone"></i> +91 98765 43210</p>
+                    <p><i class="fas fa-phone"></i> +91 8180086563</p>
                     <p><i class="fas fa-clock"></i> Response within 24 hours</p>
                 </div>
             </div>
@@ -226,16 +245,20 @@
         <div class="footer-container container">
             <div class="footer-info">
                 <h3>PRIYANSHU MITHAGARI</h3>
-                <p><i class="fas fa-phone"></i> +91 98765 43210</p>
+                <p><i class="fas fa-phone"></i> +91 8180068563</p>
                 <p><i class="fas fa-envelope"></i> priyanshu.mithagari@gmail.com</p>
                 <p><i class="fas fa-map-marker-alt"></i> Alibag, Maharashtra, India</p>
             </div>
 
             <div class="social-icons">
-                <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.behance.net/" target="_blank" aria-label="Behance"><i class="fab fa-behance"></i></a>
-                <a href="https://www.linkedin.com/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                <a href="#" target="_blank" aria-label="CV"><i class="fas fa-file-alt"></i></a>
+                <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram"><i
+                        class="fab fa-instagram"></i></a>
+                <a href="https://www.behance.net/" target="_blank" aria-label="Behance"><i
+                        class="fab fa-behance"></i></a>
+                <a href="https://www.linkedin.com/" target="_blank" aria-label="LinkedIn"><i
+                        class="fab fa-linkedin"></i></a>
+                <a href="Priyanshu Mithagari CV (2).pdf" target="_blank" aria-label="CV"><i
+                        class="fas fa-file-alt"></i></a>
             </div>
         </div>
 
@@ -248,4 +271,5 @@
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
